# NostraLearningLanguage

./: .gitignore  CMakeLists.txt
input/: lexer.l  parser.y
planning/: Planning.txt  Testcode.1.nll  Testcode.nll
src/: main.cpp
